[kcms/keyboard] Fix setting more than one option

Instead of passing the ,-delimited list of options to setkbmap's -option
option, it appended each list element, leading to e.g. -option foo:bar as:df.

BUG: 448377